--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -18,7 +18,7 @@
 	  </div>
 	 </div>
 	 <div id="footer">
-	 <p id="copyright">&copy; Jayce L. Farmer</p>
+	 <p id="copyright">&copy; JLF</p>
 	 </div>
 	<body>
 	</body>
