--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -17,7 +17,8 @@
 	  <div class="clear"></div>
 	 </div>
 	 <div id="footer">
-	 <p id="copyright">&copy; Jayce L. Farmer</p>
+	 <p  id="copyright"> <%= link_to("Login", {:action => 'login_page', :class => 'login_backlink'}) %> | &copy; JLF</p>
+
 	 </div>
 	<body>
 	</body>
